# bevy_light_2d

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
assets/shaders/: light.wgsl
examples/: basic.rs  candle.rs  dungeon.rs  light_texture.rs  minimal.rs  minimap.rs  multiple.rs  occlusion.rs
src/: component.rs  lib.rs  light.rs  occluder.rs  plugin.rs
src/render/: empty_buffer.rs  extract.rs  gpu.rs  mod.rs  prepare.rs  types.wgsl  view_transformations.wgsl
src/render/light_map/: light_map.wgsl  mod.rs  node.rs  pipeline.rs  prepare.rs
src/render/lighting/: light_map.wgsl  lighting.wgsl  mod.rs  node.rs  pipeline.rs  prepare.rs  sdf.wgsl  types.wgsl
src/render/sdf/: mod.rs  node.rs  pipeline.rs  prepare.rs  sdf.wgsl
