[package]
name = "bevy_light_2d"
version = "0.2.0-rc.2"
edition = "2021"
categories = ["game-engines", "graphics", "rendering", "gamedev"]
description = "General purpose 2d lighting for the Bevy game engine."
authors = ["James Gayfer"]
repository = "https://github.com/jgayfer/bevy_light_2d"
license = "MIT"
readme = "README.md"
exclude = ["assets/*", "static/*"]

[dependencies]
bevy = { version = "0.14.0-rc.3", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit"
] }
smallvec = "1.13"

[dev-dependencies]
bevy = { version = "0.14.0-rc.3", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_sprite",
    "png",
    "x11",
    # TODO: Remove. See https://github.com/bevyengine/bevy/issues/13728.
    "ktx2",
    "zstd",
    "bevy_pbr"
] }

[lints.clippy]
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "multiple"
path = "examples/multiple.rs"

[[example]]
name = "dungeon"
path = "examples/dungeon.rs"
