[package]
name = "bevy_light_2d"
version = "0.4.2"
edition = "2021"
categories = ["game-engines", "graphics", "rendering"]
description = "General purpose 2d lighting for the Bevy game engine."
authors = ["James Gayfer"]
repository = "https://github.com/jgayfer/bevy_light_2d"
license = "MIT"
readme = "README.md"
exclude = ["assets/*", "static/*"]

[dependencies]
bevy = { version = "0.15.0-rc.2", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "x11",
] }
smallvec = "1.13"

[dev-dependencies]
bevy = { version = "0.15.0-rc.2", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_sprite",
    "png",
    "x11"
] }

[lints.clippy]
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "multiple"
path = "examples/multiple.rs"

[[example]]
name = "dungeon"
path = "examples/dungeon.rs"

[[example]]
name = "occlusion"
path = "examples/occlusion.rs"
