[package]
name = "bevy_light_2d"
version = "0.5.0"
edition = "2021"
categories = ["game-engines", "graphics", "rendering"]
description = "General purpose 2d lighting for the Bevy game engine."
authors = ["James Gayfer"]
repository = "https://github.com/jgayfer/bevy_light_2d"
license = "MIT"
readme = "README.md"
exclude = ["assets/*", "static/*"]

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "x11",
    // TODO: Remove when https://github.com/bevyengine/bevy/issues/16568 is resolved.
    "bevy_window",
    // TODO: Remove when https://github.com/bevyengine/bevy/issues/16563 is resolved.
    "png"
] }
smallvec = "1.13"

[dev-dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_sprite",
    "png",
    "x11"
    // TODO: Remove when https://github.com/bevyengine/bevy/issues/16568 is resolved.
    "bevy_window",
] }

[lints.clippy]
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "multiple"
path = "examples/multiple.rs"

[[example]]
name = "dungeon"
path = "examples/dungeon.rs"

[[example]]
name = "occlusion"
path = "examples/occlusion.rs"
